# gazebo_assorted_tests

PBR_test/: README.md  gui.config  world.sdf
PBR_test/blender/: test_environment.blend
PBR_test/meshes/: test_environment.dae
PBR_test/sdf/: test_environment.sdf
custom_protobuf_msgs/: README.md
custom_protobuf_msgs/custom_protobuf_downstream/: CMakeLists.txt  package.xml
custom_protobuf_msgs/custom_protobuf_downstream/include/custom_protobuf_downstream/: custom_msg_system.hh
custom_protobuf_msgs/custom_protobuf_downstream/src/: custom_msg_system.cc
custom_protobuf_msgs/custom_protobuf_interface/: CMakeLists.txt  package.xml
custom_protobuf_msgs/custom_protobuf_interface/proto/: CMakeLists.txt  DetectedObject.proto
custom_protobuf_msgs/worlds/: box_above_ground.sdf
disable_collision/: README.md
disable_collision/src/: CMakeLists.txt  DisableCollision.cc  DisableCollision.hh  disable_collision.sdf
remove_plugin/: CMakeLists.txt  package.xml
remove_plugin/include/remove_plugin/: RemovePluginTest.hh
remove_plugin/src/: RemovePluginTest.cc
remove_plugin/worlds/: boxes_above_ground.sdf  boxes_on_ground.sdf
speed_limiter/: README.md
speed_limiter/src/: CMakeLists.txt  speed_limiter.cpp
